--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: job-matcher-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn Backend.job_matcher_api:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn backend.job_matcher_api:app --host 0.0.0.0 --port 10000
