--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi
-uvicorn
-python-dotenv
-pydantic
-python-docx
-pypdf
-google-generativeai
+fastapi==0.118.0
+uvicorn==0.37.0
+python-dotenv==1.1.1
+pydantic==2.11.9
+python-docx==1.1.2
+pypdf==6.1.1
+google-generativeai==0.8.5
+python-multipart==0.0.9
